// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockQuote component should render correctly 1`] = `
<div>
  <div
    class="blockQuote"
  />
</div>
`;

exports[`BlockQuote component should support passing children into the component 1`] = `
<div>
  <div
    class="blockQuote"
  >
    This is a block quote
  </div>
</div>
`;
